kinda fixed wrap issues

--- a/portfolio-web-main/src/routes/portfolio/+styles.css
+++ b/portfolio-web-main/src/routes/portfolio/+styles.css
@@ -21,7 +21,7 @@ h1 {
     /* grid */
     display: grid;
     grid-template-columns: 1fr;
-
+    background-image: url('/portfolio-route-bg.png');
     gap: 20px;
     margin: 0;
     padding: 0;
@@ -80,6 +80,12 @@ h1 {
     border-radius: 20px;
     padding: 20px;
     margin: 20px;
+}
+
+@media (max-width: 768px) {
+    .listItem {
+        flex-direction: column;
+    }
 }
 
 .listItem img {
